--- a/config.yml
+++ b/config.yml
@@ -23,7 +23,7 @@ params:
   avatarURL: /images/avatar.png
   author: cloudpanda
   authorDescription: Just a person doing stuff
-  info: Probably won't write much
+  info: Probably won't write much but I think it'll be fun to write and see the writings from me of the past.
   favicon: /images/avatar.png
   options:
     showDarkMode: true
